--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - Split codebase into daemon, library and cli
 - Add Admin defined trust database
 - Make use of librpm optional
+- Updated the man pages
 
 0.9.1
 - Make watched filesystems configurable
