--- a/doc/fapolicyd.8
+++ b/doc/fapolicyd.8
@@ -49,7 +49,7 @@ If the rpmdb is set as a trust source, you should minimize the number of 32 bit 
 If you are running in the debug mode and wish to compare rule numbers reported in the output with which rule is actually triggering, you can see the rules with the corresponding number by running the following command:
 
 .nf
-.B cat /etc/fapolicyd/fapolicyd.rules | egrep \-v '^#|^[[:space:]]*$' | awk '{ printf \(dq%s %s\(rsn\(dq, NR, $0 }'
+.B fapolicyd-cli \-\-list
 .fi
 
 .SH FILES
