--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 0.9.3
 - In fapolicyd-cli, add a --list option to list rules
+- Change lmdb to use writable mmap for startup performance improvment
 
 0.9.2
 - Split codebase into daemon, library and cli
