--- a/TODO
+++ b/TODO
@@ -4,11 +4,15 @@ Fix ld.so to not be an execution unless it really is
 
 Userspace
 =========
+Add option to delete the trust database to cli
 Add file database management to cli
+Think about config option to ask if events should go to syslog, too
+Consider exe & ftype as lists (Use AVL code for matching)
 Review pattern detection in light of EXEC_PERM events
 Does reversing path string improve lookup performance?
 Add file verification scrubber and update database status
 Use the verified status in decisions
+Conside adding rule testing to cli (uid, pgm, file)
 Allow rules to express paths using globbing (fnmatch)
 Support SWID as trust source
 
