--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 0.9.4
 - Fix pattern detection in light of EXEC_PERM events
+- Conserve memory by dropping unneeded lists after startup
 
 0.9.3
 - In fapolicyd-cli, add a --list option to list rules
