--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Do full reset of subject credentials when execve finishes 
 - Drop files in /usr/share, /usr/src, and /usr/include to reduce memory use
 - Add error checking of the trust database
+- Fixed threading issue during rpm update
 
 0.9.3
 - In fapolicyd-cli, add a --list option to list rules
