modify help explanation

--- a/doc/fapolicyd-cli.1
+++ b/doc/fapolicyd-cli.1
@@ -8,7 +8,7 @@ The fapolicyd command line utility is a tool to tell the daemon that it needs to
 .SH OPTIONS
 .TP
 .B \-h, \-\-help
-Prints this help message.
+Prints a list of command line options.
 .TP
 .B \-d, \-\-delete-db
 Deletes the trust database. Normally this never needs to be done. But if for some reason the trust database becomes corrupted, then the only method of recovery is to run this command.
