--- a/doc/fapolicyd-cli.1
+++ b/doc/fapolicyd-cli.1
@@ -18,7 +18,7 @@ Manage the file trust database.
 .RS
 .TP 12
 .B add
-This command adds the file given by path to the trust database. It gets the size and calculates the required SHA256 hash.
+This command adds the file given by path to the trust database. It gets the size and calculates the required SHA256 hash. If the path is a directory, it will walk the directory tree to the bottom and add every regular file that it finds.
 .TP 12
 .B delete
 This command deletes all entries that match from the trust database. It will try to match mutiple entries so that entire directories can be deleted in one command. To ensure that you only match a directory and not a partial name, be sure to end with '/'.
