Add update cli file option

--- a/doc/fapolicyd-cli.1
+++ b/doc/fapolicyd-cli.1
@@ -1,4 +1,4 @@
-.TH "FAPOLICYD-CLI" "1" "February 2020" "Red Hat" "System Administration Utilities"
+.TH "FAPOLICYD-CLI" "1" "March 2020" "Red Hat" "System Administration Utilities"
 .SH NAME
 fapolicyd-cli \- Fapolicyd CLI Tool
 .SH SYNOPSIS
@@ -22,6 +22,9 @@ This command adds the file given by path to the trust database. It gets the size
 .TP 12
 .B delete
 This command deletes all entries that match from the trust database. It will try to match mutiple entries so that entire directories can be deleted in one command. To ensure that you only match a directory and not a partial name, be sure to end with '/'.
+.TP 12
+.B update
+This command updates the size and hash of any matching paths in the file trust database. If no path is given, then all files are updated. If an argument is passed, then only matching paths get updated. If the intent is to match against a directory, ensure that it ends with '/'.
 .RE
 .TP
 .B \-t, \-\-ftype /path/to/file
