--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 0.9.5
-- Add file size & IMA based integrity checking
+- Add file size, IMA, and sha256 based integrity checking
 
 0.9.4
 - Fix pattern detection in light of EXEC_PERM events
