--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - Add file size, IMA, and sha256 based integrity checking
 - Add ability to send decision results to syslog
 - Add ability to define the format of the syslog event
+- Add support for sets in rules
 
 0.9.4
 - Fix pattern detection in light of EXEC_PERM events
