Add --dump-db command line option to fapolicyd-cli

--- a/doc/fapolicyd-cli.1
+++ b/doc/fapolicyd-cli.1
@@ -1,4 +1,4 @@
-.TH "FAPOLICYD-CLI" "1" "March 2020" "Red Hat" "System Administration Utilities"
+.TH "FAPOLICYD-CLI" "1" "May 2020" "Red Hat" "System Administration Utilities"
 .SH NAME
 fapolicyd-cli \- Fapolicyd CLI Tool
 .SH SYNOPSIS
@@ -12,6 +12,9 @@ Prints a list of command line options.
 .TP
 .B \-d, \-\-delete-db
 Deletes the trust database. Normally this never needs to be done. But if for some reason the trust database becomes corrupted, then the only method of recovery is to run this command.
+.TP
+.B \-D, \-\-dump-db
+Dumps the trust db contents for inspection. This will print the path, file size, and SHA256 sum of the file as known by the trust source the entry came from.
 .TP
 .B \-f, \-\-file  [add] [path]
 Manage the file trust database.
