Repurpose the verified field in the trust db to note the original source of the information for each file

--- a/doc/fapolicyd-cli.1
+++ b/doc/fapolicyd-cli.1
@@ -14,7 +14,7 @@ Prints a list of command line options.
 Deletes the trust database. Normally this never needs to be done. But if for some reason the trust database becomes corrupted, then the only method of recovery is to run this command.
 .TP
 .B \-D, \-\-dump-db
-Dumps the trust db contents for inspection. This will print the path, file size, and SHA256 sum of the file as known by the trust source the entry came from.
+Dumps the trust db contents for inspection. This will print the original trust source, path, file size, and SHA256 sum of the file as known by the trust source the entry came from.
 .TP
 .B \-f, \-\-file  [add] [path]
 Manage the file trust database.
