--- a/doc/fapolicyd-cli.1
+++ b/doc/fapolicyd-cli.1
@@ -16,7 +16,7 @@ Deletes the trust database. Normally this never needs to be done. But if for som
 .B \-D, \-\-dump-db
 Dumps the trust db contents for inspection. This will print the original trust source, path, file size, and SHA256 sum of the file as known by the trust source the entry came from.
 .TP
-.B \-f, \-\-file  [add] [path]
+.B \-f, \-\-file  add|delete|update [path]
 Manage the file trust database.
 .RS
 .TP 12
