--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - If trust db is empty when fapolicyd-cli dumps it, say its empty
 - Make fapolicyd-cli buffer bigger for rule listing
 - Fix ignored db errors from check_trust_database
+- Adjust ELF x-object detection
 
 1.0
 - Add file size, IMA, and sha256 based integrity checking
