Do device mime-type detection in-house
This is needed because libmagic tries to read it and comes up with
application/x-empty instead. So, we need to handle it ourselves
and if its not a device, then let libmagic take a look.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - Make fapolicyd-cli buffer bigger for rule listing
 - Fix ignored db errors from check_trust_database
 - Adjust ELF x-object detection
+- Do device mime-type detection in-house instead of libmagic
 
 1.0
 - Add file size, IMA, and sha256 based integrity checking
