--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Adjust ELF x-object detection
 - Do device mime-type detection in-house instead of libmagic
 - Allow arbitrarily large group statements
+- Fix logging of object trust
 
 1.0
 - Add file size, IMA, and sha256 based integrity checking
