--- a/TODO
+++ b/TODO
@@ -4,7 +4,8 @@ Fix ld.so to not be an execution unless it really is
 
 Userspace
 =========
-Add support to rules for using groups/gid
+Add rpm plugin to notity when to rebuild the trustdb
+Support other packaging manifests
 Consider adding rule testing to cli (uid, pgm, file)
 Allow rules to express paths using globbing (fnmatch)
 Support SWID as trust source
