--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 1.0.2
 - Add Group ID support for rules
 - Add test cases for avl library
+- Update support for multiple copies of a trusted executable
+- Add support for dynamic trust updating
 
 1.0.1
 - If trust db is empty when fapolicyd-cli dumps it, say its empty
