--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1.0.3
 - Add startup and shutdown syslog message
+- fapolicyd-cli open trustdb without locking to prevent daemon hang
 
 1.0.2
 - Add Group ID support for rules
