--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -1,4 +1,4 @@
-.TH FAPOLICYD.RULES: "5" "May 2020" "Red Hat" "System Administration Utilities"
+.TH FAPOLICYD.RULES: "5" "Feb 2021" "Red Hat" "System Administration Utilities"
 .SH NAME
 fapolicyd.rules \- fapolicyd rules to determine access rights
 .SH DESCRIPTION
@@ -47,7 +47,7 @@ This is the numeric session id that the audit system assigns to users when they 
 This is the numeric process id that a program has.
 .TP
 .B trust
-This is a boolean describing whether it is required for the subject to be in the trust database or not. A value of 1 means its required while 0 means its not.
+This is a boolean describing whether it is required for the subject to be in the trust database or not. A value of 1 means its required while 0 means its not. Trust checking is extended by the integrity setting in fapolicyd.conf. When trust is used on the subject, it could be a daemon. If that daemon gets updated on disk, the trustdb will be updated to the new SHA256 hash. If the integrity setting is not none, the running daemon is not likely to be trusted unless it gets restarted. The default rules are not written in a way that this would happen. But this needs to be highlighted as it may not be obvious when writing a new rule.
 .TP
 .B comm
 This is the shortened command name. When an interpreter starts a program, it usually renames the program to the script rather than the interpreter.
@@ -133,7 +133,7 @@ This option will match against the device that the file being accessed resides o
 This option matches against the mime type of the file being accessed. See \fBftype\fP under Subject for more information on determining the mime type.
 .TP
 .B trust
-This is a boolean describing whether it is required for the object to be in the trust database or not. A value of 1 means its required while 0 means its not.
+This is a boolean describing whether it is required for the object to be in the trust database or not. A value of 1 means its required while 0 means its not. Trust checking is extended by the integrity setting in fapolicyd.conf.
 .TP
 .B sha256hash
 This option matches against the sha256 hash of the file being accessed. The hash in the rules should be all lowercase letters and do NOT start with 0x. Lowercase is the default output of sha256sum.
