--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -167,6 +167,8 @@ If you are writing rules that use patterns, just select
 .I any
 as the permission to be clear that this applies to anything. In reality, pattern matching ignores the permission but the suggestion is for documentation purposes.
 
+Some interpreters do not immediately read all lines of input. Rather, they read content as needed until they get to end of file. This means that if they do stuff like networking or sleeping or anything that takes time, someone with the privileges to modify the file can add to it after the file's integrity has been checked. This is not unique to fapolicyd, it's simply how things work. Make sure that trusted file permissions are not excessive so that no unexpected file content modifications can occur.
+
 .SH EXAMPLES
 The following rules illustrate the rule syntax.
 
