--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -159,7 +159,9 @@ Set is a named group of values of the same type. Fapolicyd internally distinguis
 .SH NOTES
 When you are writing a rule for the execute permission, remember that the file to be executed is an 
 .B object.
-For example, you type ssh into the shell. The shell calls execve on /usr/bin/ssh. At that instant in time, ssh is the object that bash is working on. If you are blocking execution from a specific program, then you would normally state the program on the subject side and use
+For example, you type ssh into the shell. The shell calls execve on /usr/bin/ssh. At that instant in time, ssh is the object that bash is working on. However, if you are blocking execution
+.I from
+a specific program, then you would normally state the program on the subject side and use
 .I all
 for the object side.
 
