--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Add support for multiple trust files in a trust.d directory
 - Add troubleshooting info for when the trust db is full
 - In permissive mode, allow audit events when rules say to log it
+- Add new rpm_sha256_only config option to the daemon
 - Escape whitespaces in file names put into the file trust database
 
 1.0.3
