--- a/doc/fapolicyd.trust.5
+++ b/doc/fapolicyd.trust.5
@@ -9,10 +9,10 @@ Each line has to contain three columns and space is a valid separator. The first
 and the third is valid sha256 hash.
 .sp
 The directory \fI/etc/fapolicyd/trust\&.d\fR can be used to store multiple trust files\&.
-This way user can split the trust database into multiple files and manage them separately through \fBfapolicyd\-cli\fR\&.
-Functionaly, the fapolicy daemon will behave the same way as if the whole trust database has been defined inside \fBfapolicyd\&.trust\fR file\&.
+This way a privileged user can split the trust database into multiple files and manage them separately through \fBfapolicyd\-cli\fR\&.
+Functionally, the fapolicy daemon will behave the same way as if the whole trust database has been defined inside \fBfapolicyd\&.trust\fR file\&.
 Syntax and semantics of trust files inside \fBtrust\&.d\fR directory are the same as for \fBfapolicyd\&.trust\fR file (described above)\&.
-Trust files can either be created manually inside \fBtrust\&.d\fR directory or via \fBfapolicyd\-cli\fR\&.
+Trust files can either be created manually inside \fBtrust\&.d\fR directory or via \fBfapolicyd\-cli\fR\& (the latter option is recommended).
 
 .SH EXAMPLE
 .PP
