--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - Add support for a rules.d directory
 - Add --check-config, --check-watch_fs, and --check-trustdb to fapolicyd-cli
 - Add libgcrypt initialization
+- Break up all the rules so they can be installed in rules.d
 
 1.0.4
 - Tighten up ELF detection
