Add interpreter for s390x

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Add libgcrypt initialization
 - Break up all the rules so they can be installed in rules.d
 - Add text/x-nftables magic
+- Add interpreter for s390x
 
 1.0.4
 - Tighten up ELF detection
