--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -49,7 +49,7 @@ This is the numeric session id that the audit system assigns to users when they 
 .B pid
 This is the numeric process id that a program has.
 .TP
-.B pid
+.B ppid
 This is the numeric process id of the program's parent. Note that programs that are orphaned or started directly from systemd have a ppid value of 1. Kernel threads have a ppid value of 2.
 .TP
 .B trust
